# SurfCamWeatherPi

./: .dockerignore  .gitignore  AWS_HLS_OPTION_B.md  CI_TESTING.md  CMakeLists.txt  Dockerfile.build  LICENSE  Makefile  README.md  SCALEWAY_MIGRATION.md  camera.py  script.sh  surfcam.service  toolchain-pi-zero.cmake  weather.service  weatherPi.py
.cursor/skills/surfcam-cpp/: SKILL.md
.github/workflows/: ci.yml
include/: ApiClient.h  CameraManager.h  Config.h  HlsUploadPolicy.h  HlsUploader.h  IHlsPresignClient.h  KinesisStreamer.h  LibcameraCompat.h
scripts/: ci-run-integration-http-tests.sh  docker-build.sh  mock_api_server.py  tsan_stress.sh
src/: ApiClient.cpp  CameraManager.cpp  Config.cpp  HlsUploadPolicy.cpp  HlsUploader.cpp  KinesisStreamer.cpp  main.cpp
tests/: hls_tests.cpp  http_smoke.cpp
